[package]
name = "keyed-lock"
version = "0.2.1"
edition = "2021"
description = "A keyed lock for synchronization."
license = "MIT"

[dependencies]
parking_lot = { version = "0.12", optional = true, features = ["arc_lock"] }
tokio = { version = "1", optional = true, features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["sync", "async"]
sync = ["parking_lot"]
async = ["tokio"]
send_guard = ["parking_lot?/send_guard"]
