[package]
name = "keyed-lock"
version = "0.2.2"
edition = "2021"
description = "A keyed lock for synchronization."
license = "MIT"
keywords = [
    "lock",
    "mutex",
    "keyed-lock",
    "named-lock",
    "async",
]
categories = ["concurrency"]
repository = "https://github.com/ldm0/keyed-lock"

[dependencies]
parking_lot = { version = "0.12", features = ["arc_lock"] }
tokio = { version = "1", optional = true, features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["sync", "async"]
sync = []
async = ["tokio"]
send_guard = ["parking_lot/send_guard"]
